<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StockInfo" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/companyNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="@dimen/set"
            android:paddingTop="@dimen/set"
            android:text="null"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="35sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/prevCloseTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="null"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/openTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="null"
            android:textSize="12sp" />

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bidTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="null"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/askTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="null"
            android:textSize="12sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="LAST 5 REBOOTS"
            android:textSize="20sp" />

    </TableRow>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/idValue"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView3"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/testHeadline"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/id1"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/time1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/headline1"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/id2"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/time2"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/headline2"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/id3"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/time3"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/headline3"
                android:layout_height="wrap_content"
				android:layout_width="0dip"
                android:layout_weight="1"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/id4"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/time4"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/headline4"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/id5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/time5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/headline5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="null"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_height="wrap_content"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:columnCount="5"
        android:orientation="horizontal"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/button1"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="5"
            android:text="@string/voldown" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="7"
            android:text="@string/menu" />

        <Button
            android:id="@+id/button4"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="5"
            android:text="@string/volup" />

        <Button
            android:id="@+id/button5"
            android:layout_column="2"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_row="5"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/Ok" />

        <Button
            android:id="@+id/button2"
            android:layout_column="2"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_row="4"
            android:text="@string/chup" />

        <Button
            android:id="@+id/button7"
            android:layout_column="3"
            android:layout_gravity="left|top"
            android:layout_row="7"
            android:text="@string/guide" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_row="6"
            android:text="@string/chdown"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button8"
            android:layout_column="2"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:layout_row="7"
            android:text="@string/exit" />

        <Button
            android:id="@+id/button9"
            android:layout_column="2"
            android:layout_gravity="left|top"
            android:layout_row="3"
            android:text="@string/power" />

        <Space
            android:layout_column="4"
            android:layout_gravity="left|top"
            android:layout_row="5" />
    </GridLayout>

</TableLayout>
